docs: drop backend, rewrite for standalone Android app
Pivot: no own backend, app talks to 3x-ui panels directly.
Data stored locally in SQLCipher-encrypted Room DB, passphrase
wrapped by Android Keystore (AES-256-GCM, non-exportable).

- Backend modules, Postgres, Liquibase, Spring — removed.
- Cross-device sync and real push notifications — dropped;
  replaced by manual export/import and WorkManager polling
  (both in backlog).
- 3x-ui API endpoint mapping and session handling kept,
  moved into app as :core:xui module.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>